Bug 76458 - Fails to build with --enable-gtk-doc and gtk-doc 1.2.0
Summary: Fails to build with --enable-gtk-doc and gtk-doc 1.2.0
Status: RESOLVED FIXED
Alias: None
Product: Farstream
Classification: Unclassified
Component: Core (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Olivier Crête
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-21 15:32 UTC by Iain Lane
Modified: 2014-05-06 04:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix some mismatched / redundant <para> gtk-doc tags (3.26 KB, text/plain)
2014-03-21 15:33 UTC, Iain Lane
Details

Description Iain Lane 2014-03-21 15:32:53 UTC
It seems gtk-doc 1.2.0 got more strict about parsing and unbalanced tags:

make[4]: Entering directory `/«PKGBUILDDIR»/docs/libs'
  DOC   Scanning header files
  DOC   Introspecting gobjects
  DOC   Building XML
../../farstream/fs-candidate.c:228: warning: Parameter description for fs_candidate_new_full::username is missing in source code comment bloc
k.
./farstream-libs-unused.txt:1: warning: 2 unused declarations.They should be added to farstream-libs-sections.txt in the appropriate place.
  DOC   Building HTML
../xml/fs-conference.xml:82: parser error : Opening and ending tag mismatch: refsect1 line 75 and para
</para></para>
              ^
../xml/fs-conference.xml:95: parser error : Opening and ending tag mismatch: para line 93 and refsect1
</refsect1>
           ^
../farstream-libs-docs.sgml:23: element include: XInclude error : could not load ../xml/fs-conference.xml, and no fallback was found
../xml/fs-session.xml:133: parser error : Opening and ending tag mismatch: refsect1 line 122 and para
</para></para>
              ^
../xml/fs-session.xml:228: parser error : Opening and ending tag mismatch: para line 226 and refsect1
</refsect1>
           ^
../farstream-libs-docs.sgml:25: element include: XInclude error : could not load ../xml/fs-session.xml, and no fallback was found
../xml/fs-stream.xml:120: parser error : Opening and ending tag mismatch: refsect1 line 110 and para
</para></para>
              ^
../xml/fs-stream.xml:179: parser error : Opening and ending tag mismatch: para line 177 and refsect1
</refsect1>
           ^
../farstream-libs-docs.sgml:26: element include: XInclude error : could not load ../xml/fs-stream.xml, and no fallback was found
make[4]: *** [html-build.stamp] Error 6
Comment 1 Iain Lane 2014-03-21 15:33:54 UTC
Created attachment 96173 [details]
Fix some mismatched / redundant <para> gtk-doc tags
Comment 2 Olivier Crête 2014-03-21 16:25:07 UTC
wtf team gtkdoc, previously, we have to close the <para> that they added automatically to be able to create sections.
Comment 3 Olivier Crête 2014-05-06 04:37:16 UTC
Seems to also work with gtk-doc 1.19, so lets require 1.18 and hope it's all good.

Committed:

commit c84c351e3dd55f3cd77e4031d4faf86e5637b4bc
Author: Iain Lane <iain.lane@canonical.com>
Date:   Fri Mar 21 15:18:38 2014 +0000

    Fix some mismatched / redundant <para> gtk-doc tags
    
    gtk-doc 1.20 got more strict about correctness here wrt. balanced tags.
    
    Also bump the relevant gtk-doc requirement, these tags were added for
    a reason back then.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=76458


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.