Fix some mismatched / redundant <para> gtk-doc tags

gtk-doc 1.20 got more strict about correctness here wrt. balanced tags.

Also bump the relevant gtk-doc requirement, these tags were added for
a reason back then.

https://bugs.freedesktop.org/show_bug.cgi?id=76458